--- a/client/index.html
+++ b/client/index.html
@@ -4,46 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Store Table Status</title>
-    <script
-      type="text/javascript"
-      nonce="7249ae47a97646728fe3a804eae"
-      src="//local.adguard.org?ts=1732670452154&amp;type=content-script&amp;dmn=storage.googleapis.com&amp;url=https%3A%2F%2Fstorage.googleapis.com%2Fserver-send-event-dev%2Findex.html&amp;app=com.apple.Safari&amp;css=3&amp;js=1&amp;rel=1&amp;rji=1&amp;sbe=1"
-    ></script>
-    <script
-      type="text/javascript"
-      nonce="7249ae47a97646728fe3a804eae"
-      src="//local.adguard.org?ts=1732670452154&amp;name=AdGuard%20Extra&amp;type=user-script"
-    ></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Connection Status -->
-    <div id="connection-status" class="status-indicator disconnected">
-      Disconnected
-    </div>
-
-    <!-- Store Selection -->
-    <div id="store-selection" class="store-selection-container">
-      <h1>Select a Store</h1>
-      <div id="store-list" class="store-list"></div>
-    </div>
-
-    <!-- Table Status Section -->
-    <div id="table-status" class="table-status-container" style="display: none">
-      <div class="store-info">
-        <h2 id="selected-store">Selected Store: None</h2>
+    <div class="container">
+      <header>
+        <!-- Connection Status -->
+        <div id="connection-status" class="status-indicator disconnected">
+          Disconnected
+        </div>
+        <h1>Store Table Status</h1>
+        <p>Select a store to view and track its table status in real-time.</p>
+      </header>
+      <div class="dropdown">
+        <label for="store-search" class="label">Search Stores</label>
+        <input
+          type="text"
+          id="store-search"
+          class="search-box"
+          placeholder="Search stores..."
+        />
+        <select id="store-select" class="store-dropdown" size="5"></select>
       </div>
-      <div id="table-list" class="table-list"></div>
-      <div class="update-status">
-        <label for="table-status-select">Change Status: </label>
-        <select id="table-status-select">
-          <option value="available">Available</option>
-          <option value="reserved">Reserved</option>
-          <option value="occupied">Occupied</option>
-        </select>
+      <div id="selected-store" class="selected-store hidden">
+        <p>Selected Store: <span id="store-name"></span></p>
+        <button id="change-store" class="change-store-button">
+          Change Store
+        </button>
+      </div>
+      <div id="table-status" class="table-container">
+        <h2>Table Status</h2>
+        <table class="status-table">
+          <thead>
+            <tr>
+              <th>Table</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody id="table-body">
+            <!-- Dynamic rows will be added here -->
+          </tbody>
+        </table>
       </div>
     </div>
-
     <script src="app.js"></script>
   </body>
 </html>
